<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/title_me"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/me_title"
        android:layout_alignParentTop="true"/>
    <View
        android:id="@+id/title_line"
        android:background="@color/divider_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/title_me"/>
    <TextView
        android:textSize="11sp"
        android:textColor="@color/main_tab_text_checked"
        android:gravity="center_horizontal"
        android:id="@+id/me_user_protocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/me_user_agreement"
        android:layout_alignParentBottom="true"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/me_user_protocol"
        android:layout_below="@+id/title_line">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_me_version"
                android:background="@color/white"
                android:paddingTop="21dp"
                android:paddingBottom="21dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <ImageView
                    android:id="@+id/icon_image"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/me_version"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/text_black"
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_version_title"
                    android:layout_toRightOf="@+id/icon_image"
                    android:layout_marginStart="14dp"/>
                <TextView
                    android:textSize="13sp"
                    android:textColor="@color/main_tab_text_uncheck"
                    android:id="@+id/me_vision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>